syntax = "proto3";

//#options
option java_multiple_files = true;
option java_package = "fr.acinq.eclairgrpc.grpc";
//#options

service Greeter {

  rpc SayHello (HelloRequest) returns (HelloReply) {}

}
service StreamGreeter {

  rpc StreamHellos (stream HelloRequest) returns (stream HelloReply) {}

}
//#services

//#messages
message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
//#messages